capacitor source code update

--- a/Toupesu-2.0/src/app/dashboard/my-tontines/tontine-detail/contribution-not-paid/contribution-not-paid.page.html
+++ b/Toupesu-2.0/src/app/dashboard/my-tontines/tontine-detail/contribution-not-paid/contribution-not-paid.page.html
@@ -10,7 +10,7 @@
 <ion-content class="my-penalities">
   <ion-refresher slot="fixed" (ionRefresh)="refreSher($event)">
     <ion-refresher-content
-      pullingIcon="arrow-dropdown"
+      pullingIcon="reload-outline"
       refreshingSpinner="circles"
       refreshingText="{{ 'M_REFRESHING_TEXT' | translate }}">
     </ion-refresher-content>
