--- a/Toupesu-2.0/src/app/dashboard/my-wallet/withdrawal/withdrawal.page.html
+++ b/Toupesu-2.0/src/app/dashboard/my-wallet/withdrawal/withdrawal.page.html
@@ -53,7 +53,7 @@
                   <ion-label>{{ 'M_PAY_BY' | translate }}</ion-label>
                   <ion-select (ionChange)="updatePayment(withdrawal.value.method_payment_id)"
                     formControlName="method_payment_id">
-                    <ion-select-option *ngFor="let operator of paymentMethods; let m=index" [selected]="m===0" [value]="operator.id">{{ operator.label }}
+                    <ion-select-option *ngFor="let operator of paymentMethods; let m=index" [value]="operator.id">{{ operator.label }}
                     </ion-select-option>
                   </ion-select>
                 </ion-item>
@@ -88,7 +88,7 @@
                   <ion-row>
                     <ion-col *ngIf="bankList && bankList.length > 0">
                       <ion-item>
-                        <ion-label position="floating">{{'WALLET_AMOUNT_WITHDRAWAL' | translate}} 
+                        <ion-label position="floating">{{'WALLET_AMOUNT_WITHDRAWAL' | translate}}
                           <span *ngIf="withdrawal.value.device_name">({{withdrawal.value.device_name}})</span></ion-label>
                         <ion-input (ionChange)="checkAmount(withdrawal.value.amount)" type="number"
                           formControlName="amount"></ion-input>
@@ -185,18 +185,18 @@
                       </div>
                     </ion-col>
                   </ion-row>
-                  <ion-row *ngIf="bankList && bankList.length > 0">   
+                  <ion-row *ngIf="bankList && bankList.length > 0">
                     <ion-col size="6" >
-                        <ion-button 
+                        <ion-button
                               color="warning" [disabled]="!withdrawal.value"
                               shape="round" size="small" (click)="openUpdateBank(withdrawal.value)">
                               {{'M_UPDATE' | translate }}
                         </ion-button>
-                    </ion-col>  
+                    </ion-col>
                     <ion-col  size="6" >
                         <ion-button   [disabled]="!withdrawal.value.user_bank_profile_id"
                               fill="outline"
-                              color="warning" 
+                              color="warning"
                               shape="round" size="small" (click)="confirmDeleteAccount(withdrawal.value.user_bank_profile_id)">
                           {{'TEXT_DELETE' | translate }}
                         </ion-button>
@@ -237,7 +237,7 @@
                     <ion-col size="4">
                       <ion-item>
                         <ion-label position="floating">+</ion-label>
-                        <ion-input type="text" placeholder="{{withdrawal.value.phoneid}}"></ion-input>
+                        <ion-input type="text"  formControlName="phoneid" ></ion-input>
                       </ion-item>
                     </ion-col>
                     <ion-col size="8">
@@ -252,7 +252,7 @@
                             <ion-icon name="information-circle-outline" ></ion-icon>
                            <span  [innerHTML]="'REGISTER_PHONE_INVALID' | translate"></span>
                           </div>
-                      </div>    
+                      </div>
                     </ion-col>
                   </ion-row>
                   <ion-row *ngIf="isOperator()">
