--- a/Toupesu-2.0/src/app/shared/paidmode-debt/paidmode-debt.component.html
+++ b/Toupesu-2.0/src/app/shared/paidmode-debt/paidmode-debt.component.html
@@ -6,15 +6,15 @@
   <ion-row>
     <ion-col size="12">
       <ion-card class="paidmode">
-        <ion-card-content class="ion-text-center">    
+        <ion-card-content class="ion-text-center">
           <ion-row>
             <ion-col size="12">
               <ion-item>
                 <ion-label>{{'COUNTRY_TEXT' | translate}}</ion-label>
                 <ion-select (ionChange)="updateCurrencyCountry(userPayMethodForm.value.country_id)" formControlName="country_id">
-                  <ion-select-option [value]="country.country_id" *ngFor="let country of states">{{ country.country_label }}</ion-select-option>          
+                  <ion-select-option [value]="country.country_id" *ngFor="let country of states">{{ country.country_label }}</ion-select-option>
                 </ion-select>
-              </ion-item>   
+              </ion-item>
               <div class="validation-errors">
                 <ng-container *ngFor="let validation of validationMessages.country_id">
                   <div class="error-message" *ngIf="country.hasError(validation.type) && (country.dirty || country.touched)">
@@ -22,22 +22,22 @@
                     {{ validation.message }}
                   </div>
                 </ng-container>
-              </div>     
+              </div>
             </ion-col>
-          </ion-row>       
+          </ion-row>
             <ion-row class="ion-justify-content-end" *ngIf="userPayMethodForm.value.country_id && paymentMethods && paymentMethods.length > 0">
               <ion-col size="4">
                 <ion-img [src]="paymentMethods&&paymentMethods[userPayMethodForm.value.typePaymentIndex] ? paymentMethods[userPayMethodForm.value.typePaymentIndex].logo : ' '" class="logooperator"></ion-img>
               </ion-col>
-            </ion-row>  
+            </ion-row>
             <ion-row *ngIf="userPayMethodForm.value.country_id && paymentMethods && paymentMethods.length > 0">
               <ion-col size="12">
                 <ion-item>
                   <ion-label>{{ 'USER_PROFILE_TEXT4' | translate }}</ion-label>
                   <ion-select (ionChange)="updatePaymentMethod(userPayMethodForm.value.typePaymentIndex)" formControlName="typePaymentIndex">
-                    <ion-select-option *ngFor="let operator of paymentMethods; let operatorId = index" [value]="operatorId">{{ operator.name }}</ion-select-option>           
+                    <ion-select-option *ngFor="let operator of paymentMethods; let operatorId = index" [value]="operatorId">{{ operator.name }}</ion-select-option>
                   </ion-select>
-                </ion-item>   
+                </ion-item>
                 <div class="validation-errors">
                   <ng-container *ngFor="let validation of validationMessages.payementtype">
                     <div class="error-message" *ngIf="payementtype.hasError(validation.type) && (payementtype.dirty || payementtype.touched)">
@@ -45,21 +45,21 @@
                       {{ validation.message }}
                     </div>
                   </ng-container>
-                </div>   
+                </div>
               </ion-col>
-            </ion-row> 
+            </ion-row>
             <ion-row  *ngIf="checkMobileOperator()">
               <ion-col size="4">
                 <ion-item  >
                   <ion-label position="floating">+</ion-label>
-                  <ion-input placeholder="{{userPayMethodForm.value.country_prefix}}" type="text"></ion-input>
-                </ion-item>        
+                  <ion-input  formControlName="country_prefix" type="text"></ion-input>
+                </ion-item>
               </ion-col>
               <ion-col size="8">
                 <ion-item >
                   <ion-label position="floating">{{ 'REGISTER_MPHONE' | translate }}</ion-label>
                   <ion-input (ionChange)="checckEmailOrPhone(userPayMethodForm.value.phone,userPayMethodForm.value.typePaymentIndex)" type="tel" formControlName="phone"></ion-input>
-                </ion-item> 
+                </ion-item>
               </ion-col>
               <ion-col size="12">
                 <div class="validation-errors" *ngIf="errorPhone">
@@ -67,16 +67,16 @@
                     <ion-icon name="information-circle-outline" ></ion-icon>
                     <span [innerHTML]="'USER_DETAIL_TEXT11' | translate"></span>
                   </div>
-                </div>          
+                </div>
               </ion-col>
-            </ion-row> 
+            </ion-row>
             <ion-row class="ion-padding-bottom">
               <ion-col size="12">
                 <ion-item>
                   <ion-label position="floating" >{{ 'AMOUNT_TEXT' | translate }}</ion-label>
                   <ion-input  (ionChange)="updatePaypalAmount()" type="number" formControlName="montant"></ion-input>
                   <span slot="end" class="slot-prefix ion-no-margin"> {{ contributionData.device_name }} </span>
-                </ion-item> 
+                </ion-item>
                 <div class="validation-errors">
                   <ng-container *ngFor="let validation of validationMessages.amount">
                     <div class="error-message" *ngIf="montantContributeError.hasError(validation.type) && (montantContributeError.dirty || montantContributeError.touched)">
@@ -84,7 +84,7 @@
                       {{ validation.message }}
                     </div>
                   </ng-container>
-                </div>          
+                </div>
               </ion-col>
             </ion-row>
             <ion-row   *ngIf="canShowPaypalMessage()">
@@ -93,17 +93,17 @@
                   <p style="color: red">{{paypalMessage}}</p>
               </div>
               </ion-col>
-            </ion-row>                        
+            </ion-row>
         </ion-card-content>
       </ion-card>
-    </ion-col>      
+    </ion-col>
   </ion-row>
   <ion-row>
     <svg height="0" width="0" viewBox="0 0 27.7 28.93">
       <defs>
         <clipPath id="pay-btn-shape1" >
-          <path d="M2.57,17.21A11.18,11.18,0,0,1,9.17,5.77h.06l.17-.22.11-.23c-1-.73-1.56-1.42-1.39-2,.42-1.32,5-1.17,10.22.33S27.43,7.47,27,8.81c-.16.48-.86.76-1.88.86h0v.1a5,5,0,0,0,.08.66,3.77,3.77,0,0,0,.1.46l.07.23c2,4,1.7,8.37-1.73,12.53a12.23,12.23,0,0,1-18.42-.1A11.55,11.55,0,0,1,2.57,17.21Z" />            
-        </clipPath>        
+          <path d="M2.57,17.21A11.18,11.18,0,0,1,9.17,5.77h.06l.17-.22.11-.23c-1-.73-1.56-1.42-1.39-2,.42-1.32,5-1.17,10.22.33S27.43,7.47,27,8.81c-.16.48-.86.76-1.88.86h0v.1a5,5,0,0,0,.08.66,3.77,3.77,0,0,0,.1.46l.07.23c2,4,1.7,8.37-1.73,12.53a12.23,12.23,0,0,1-18.42-.1A11.55,11.55,0,0,1,2.57,17.21Z" />
+        </clipPath>
       </defs>
     </svg>
     <ion-col size="12" class="ion-text-center wrap-pay-btn" *ngIf="canPay()"  (click)="showPayment(userPayMethodForm.value)">
@@ -114,23 +114,23 @@
         </g>
         <path class="pot-entry" d="M22,6.27c-1.13-.38-2.45-.85-3.86-1.22-1-.28-2.17-.57-3.11-.75-2.64-.47-4.52-.57-4.62-.09-.09.19.19.57.75.85A24.19,24.19,0,0,0,17.46,7.4a22.19,22.19,0,0,0,7.07,1.13c.38-.09.66-.19.66-.28C25.32,7.9,24.05,7.15,22,6.27Z" />
         <text class="pay-text"><tspan style="letter-spacing: -0.05859375em">P</tspan><tspan x="4.94" y="0" style="letter-spacing: -0.087890625em">A</tspan><tspan x="10.56" y="0">Y</tspan></text>
-      </svg>     
+      </svg>
       <div class="glow-wrap">
         <i class="glow"></i>
-      </div>          
+      </div>
     </ion-col>
-  </ion-row> 
+  </ion-row>
   <ion-row  *ngIf="paypalLoading">
     <ion-col>
       <p class="ion-text-center ion-padding">
         <ion-spinner  name="circles"></ion-spinner>
       </p>
     </ion-col>
-  </ion-row> 
+  </ion-row>
   <ion-row *ngIf="canShowPaypalButton()">
     <ion-col class="ion-padding" size="12">
-      <div #paypalbuttoncontainer id="paypal-button-container"></div> 
+      <div #paypalbuttoncontainer id="paypal-button-container"></div>
     </ion-col>
-  </ion-row>  
+  </ion-row>
 </ion-grid>
-</form> 
+</form>
