--- a/Toupesu-2.0/src/app/dashboard/dashboard-menu/dashboard-menu.component.html
+++ b/Toupesu-2.0/src/app/dashboard/dashboard-menu/dashboard-menu.component.html
@@ -9,6 +9,11 @@
       {{ 'MENU_NEW_TONTINE' | translate }}
     </ion-label>
   </ion-item>
+  <ion-item (click)="goToTontineDemo()" lines="none">
+    <ion-label>
+      {{ 'TONTINE_DEMO_TEXT' | translate }}
+    </ion-label>
+  </ion-item>
   <ion-item (click)="createTontineEventPage()" lines="none">
     <ion-label>
      {{ 'M_NEW_TONTINE_EVENT' | translate }}
