--- a/Toupesu-2.0/src/app/dashboard/my-tontines/tontine-detail/members/members.page.html
+++ b/Toupesu-2.0/src/app/dashboard/my-tontines/tontine-detail/members/members.page.html
@@ -36,10 +36,10 @@
             <ion-avatar slot="start">
               <svg class="mytontine-icon" [class.active-icon]="hasContribute(membres, member.id)" preserveAspectRatio="xMidYMid slice" viewBox="0 0 48.84 38">
                 <defs>
-                    <clipPath id="pot-status-path" transform="translate(-0.01 0)">                            
+                    <clipPath id="pot-status-path" transform="translate(-0.01 0)">
                         <path class="cls-1" d="M1.85,24.61a11.87,11.87,0,0,1,7-12.14l.06,0,.18-.23L9.21,12c-1.1-.78-1.66-1.51-1.48-2.07.45-1.4,5.31-1.24,10.85.35s9.66,4,9.21,5.42c-.17.51-.91.81-2,.91v0s0,0,0,.11a5.29,5.29,0,0,0,.09.7,4,4,0,0,0,.11.49l.07.24c2.14,4.2,1.8,8.88-1.84,13.3-4.63,5.64-14.39,6.08-19.55-.11A12.26,12.26,0,0,1,1.85,24.61Z"/>
                     </clipPath>
-                </defs>                        
+                </defs>
                 <path class="cls-3" d="M5.39,13.66A13,13,0,0,0,1,23.5a11.83,11.83,0,0,0,.17,1.8,13.61,13.61,0,0,0,.45,1.76c.09.29.2.57.31.85a8.75,8.75,0,0,0,.37.83,15.76,15.76,0,0,0,.87,1.59,13,13,0,0,0,3.72,3.84,14.32,14.32,0,0,0,8.52,2.35,16.78,16.78,0,0,0,1.8-.18A14.59,14.59,0,0,0,19,35.95a13.58,13.58,0,0,0,6-3.72,12.35,12.35,0,0,0,2-3,12.86,12.86,0,0,0,1.12-3.47,11.71,11.71,0,0,0-1-7.26,11.06,11.06,0,0,1,.9,1.68A11.31,11.31,0,0,1,28.69,22a12,12,0,0,1,.23,3.86,13.57,13.57,0,0,1-1,3.78,12.86,12.86,0,0,1-2,3.36,13.63,13.63,0,0,1-1.39,1.41,14.14,14.14,0,0,1-1.58,1.19,14.82,14.82,0,0,1-3.58,1.69,13.77,13.77,0,0,1-1.93.46,18.23,18.23,0,0,1-2,.22,15.19,15.19,0,0,1-4-.29A15.44,15.44,0,0,1,6,35.35,12.24,12.24,0,0,1,4.5,34.11,14.78,14.78,0,0,1,.1,25.47a10.93,10.93,0,0,1-.08-2,13.12,13.12,0,0,1,2.61-7.21A11.06,11.06,0,0,1,5.39,13.66ZM6.84,9.9a1.61,1.61,0,0,1-.08-.83,1.93,1.93,0,0,1,.34-.81,2.43,2.43,0,0,1,1.54-.88,6.7,6.7,0,0,1,.86-.09H12a27.35,27.35,0,0,1,6.57,1.06A25.41,25.41,0,0,1,24.66,11a21.85,21.85,0,0,1,2.72,1.94,4.08,4.08,0,0,1,1.08,1.35,1.37,1.37,0,0,1,.09.89,1.32,1.32,0,0,1-.5.68,1.28,1.28,0,0,0,.31-.71,1.11,1.11,0,0,0-.22-.69,3.86,3.86,0,0,0-1.14-1c-.91-.56-1.86-1.08-2.82-1.56a36.4,36.4,0,0,0-6-2.31,40.51,40.51,0,0,0-6.3-1.29c-.53-.06-1.07-.12-1.61-.16L9.5,8a6.82,6.82,0,0,0-.78,0,2,2,0,0,0-1.35.49A1.67,1.67,0,0,0,6.84,9.9Z" transform="translate(-0.01 0)"/>
                 <g class="cls-4">
                     <rect class="cls-3" x="1.43" y="7.88" width="26.63" height="28.07"/>
@@ -57,8 +57,9 @@
               <h2>{{member.name }} <small *ngIf="member.administrator === 1"><br/>({{'ADMINISTRATOR_TEXT' | translate }})</small></h2>
               <h3><small>{{ 'TONTINE_USERS_TEXT8' | translate }}:</small> {{getNumberPart(member.id)}}</h3>
               <p>{{member.phone}}</p>
-              <p>{{member.email}}</p> 
-              <p> {{ 'STATUS_TEXT' | translate }} :  {{ member.active === 1 ? ('M_ACTIVE_TEXT' | translate) : ('M_INACTIVE_TEXT' | translate) }}</p>             
+              <p>{{member.email}}</p>
+              <p> {{ 'STATUS_TEXT' | translate }} :  {{ member.active === 1 ? ('M_ACTIVE_TEXT' | translate) : ('M_INACTIVE_TEXT' | translate) }}</p>
+              <p *ngIf="member.caution !== 'none'"> {{ 'STATUS_CAUTION_TEXT' | translate }} :  {{ member.caution === 0 ? ('M_UNPAID_TEXT' | translate ) : ('M_PAID_TEXT' | translate) }}</p>
             </ion-label>
             <ion-buttons slot="end" class="popover-menu" *ngIf="myTontine.administrator === 1">
               <ion-button (click)="openContextMenu($event,member)">
@@ -84,8 +85,8 @@
 </ion-content>
 
 <ion-footer class="ion-padding ion-text-center" *ngIf="canAddMember()">
-  <ion-button expand="full" 
-        color="warning" 
+  <ion-button expand="full"
+        color="warning"
         class="ion-text-uppercase"
         shape="round" (click)="openAddMember()">
       {{ 'ADD_MEMBER_TEXT' | translate}}
