--- a/Toupesu-2.0/src/app/dashboard/my-tontines/tontine-detail/wallet/history/history.page.html
+++ b/Toupesu-2.0/src/app/dashboard/my-tontines/tontine-detail/wallet/history/history.page.html
@@ -15,7 +15,7 @@
 <ion-content>
   <ion-refresher slot="fixed" (ionRefresh)="refreSher($event)">
     <ion-refresher-content
-      pullingIcon="arrow-dropdown"
+      pullingIcon="reload-outline"
       refreshingSpinner="circles"
       refreshingText="{{ 'M_REFRESHING_TEXT' | translate }}">
     </ion-refresher-content>
