--- a/Toupesu-2.0/src/app/shared/tontine-invited/tontine-invited.component.html
+++ b/Toupesu-2.0/src/app/shared/tontine-invited/tontine-invited.component.html
@@ -1,16 +1,19 @@
-<ion-grid class="add-member">
+<p class="ion-text-center"  *ngIf="loadingTontines">
+  <ion-spinner  name="circles"></ion-spinner>
+</p>
+<ion-grid class="add-member" *ngIf="!loadingTontines">
   <ion-row>
     <ion-col size="12">
       <ion-card class="mber-invited">
         <ion-card-content>
             <form [formGroup]="formInvited">
-              <ion-row *ngIf="tontines && tontines.length > 0">
+              <ion-row>
                 <ion-col size="12">
                   <ion-item (click)="showTontines()">
                     <ion-label>{{ 'M_TONTINE_TEXT' | translate }} : </ion-label>
-                    <p><strong> {{truncateName(formInvited.value.tontineName,12)}}</strong> </p>          
+                    <p><strong> {{truncateName(formInvited.value.tontineName,12)}}</strong> </p>
                     <ion-icon name="chevron-down-outline" slot="end"></ion-icon>
-                  </ion-item>  
+                  </ion-item>
                 </ion-col>
               </ion-row>
               <ion-row>
@@ -18,16 +21,17 @@
                   <ion-item>
                     <ion-label>{{ 'M_SEND_METHOD' | translate }}</ion-label>
                     <ion-select  (ionChange)="validateFields(formInvited.value.sendMode)" formControlName="sendMode">
-                      <ion-select-option [value]="'sms'"> {{ 'M_SMS_TEXT' | translate }}</ion-select-option>      
-                      <ion-select-option [value]="'email'">{{ 'EMAIL_TEXT' | translate }}</ion-select-option>     
+                      <ion-select-option [value]="'network'">{{ 'SOCIAL_NETWORK_TEXT' | translate }}</ion-select-option>
+                      <ion-select-option [value]="'sms'"> {{ 'M_SMS_TEXT' | translate }}</ion-select-option>
+                      <ion-select-option [value]="'email'">{{ 'EMAIL_TEXT' | translate }}</ion-select-option>
                     </ion-select>
-                  </ion-item> 
- 
+                  </ion-item>
+
                   <ion-item *ngIf="formInvited.value.sendMode === 'sms'" (click)="showCountries()">
                     <ion-label>{{'COUNTRY_TEXT' | translate}} : </ion-label>
-                    <p><strong> {{ formInvited.value.countryName }} </strong> </p>          
+                    <p><strong> {{ formInvited.value.countryName }} </strong> </p>
                     <ion-icon name="chevron-down-outline" slot="end"></ion-icon>
-                  </ion-item> 
+                  </ion-item>
                   <div class="validation-errors">
                     <ng-container *ngFor="let validation of validationMessages.sendMode">
                       <div class="error-message" *ngIf="sendMode.hasError(validation.type) && (sendMode.dirty || sendMode.touched)">
@@ -35,12 +39,15 @@
                         {{ validation.message }}
                       </div>
                     </ng-container>
-                  </div>   
+                  </div>
                 </ion-col>
+              </ion-row>
+              <ion-row *ngIf="formInvited.value.sendMode === 'sms' || formInvited.value.sendMode === 'email'">
+
                 <ion-col size="12">
                     <ul>
                         <li *ngFor="let sendTo of sendList.controls">
-                            {{ sendTo.value }} 
+                            {{ sendTo.value }}
                             <ion-button fill="clear" color="warning" (click)="removeContact(sendTo)">
                                 <ion-icon name="remove-circle-outline" slot="icon-only"></ion-icon>
                             </ion-button>
@@ -50,12 +57,12 @@
                 <ion-col size="9">
                   <ion-item lines="none">
                     <ion-label>{{ 'TONTINE_INVITED_TEXT1' | translate }}</ion-label>
-                  </ion-item> 
+                  </ion-item>
                 </ion-col>
                 <ion-col size="3">
                   <ion-button fill="clear" [disabled]="canAddNewMember()" color="warning" (click)="addMberContact(mberContact)">
                       <ion-icon name="add-circle-outline" slot="icon-only"></ion-icon>
-                  </ion-button>                  
+                  </ion-button>
                 </ion-col>
                 <ion-col size="4"  *ngIf="formInvited.value.sendMode === 'sms'">
                   <ion-item>
@@ -65,21 +72,33 @@
                 </ion-col>
                 <ion-col>
                   <ion-item>
-                    <ion-input  (ionChange)="validateFields(formInvited.value.sendMode)" formControlName="emailOrPhone" [type]="formInvited.value.sendMode === 'sms' ? 'tel' : 'email'" placeholder="{{ formInvited.value.sendMode === 'sms'  ? ('REGISTER_MPHONE' | translate) : ('M_EMAIL_MSG' | translate) }}" 
+                    <ion-input  (ionChange)="validateFields(formInvited.value.sendMode)" formControlName="emailOrPhone" [type]="formInvited.value.sendMode === 'sms' ? 'tel' : 'email'" placeholder="{{ formInvited.value.sendMode === 'sms'  ? ('REGISTER_MPHONE' | translate) : ('M_EMAIL_MSG' | translate) }}"
                     #mberContact></ion-input>
-                  </ion-item> 
+                  </ion-item>
                 </ion-col>
-                <ion-col size="12" *ngIf="formInvited.value.emailOrPhone">  
+                <ion-col size="12" *ngIf="formInvited.value.emailOrPhone">
                   <p *ngIf="canShowContactMember()">{{'M_MEMBER_CONTACT' | translate}} {{ 'TONTINE_INVITED_TEXT4' | translate }}.</p>
                 </ion-col>
+
               </ion-row>
-              <ion-row>
+              <ion-row  *ngIf="formInvited.value.sendMode === 'sms' || formInvited.value.sendMode === 'email'">
                 <ion-col>
-                    <ion-button expand="full" 
-                          color="warning" 
+                    <ion-button expand="full"
+                          color="warning"
                           class="ion-text-uppercase"
                           shape="round" [disabled]="canInviteMember()" (click)="sendInvitation()">
                           {{ 'TONTINE_INVITE_TEXT2' | translate }}
+                    </ion-button>
+                </ion-col>
+              </ion-row>
+
+              <ion-row  *ngIf="formInvited.value.sendMode === 'network'" >
+                <ion-col>
+                    <ion-button expand="full"
+                          color="warning"
+                          class="ion-text-uppercase"
+                          shape="round" [disabled]="tontines && tontines.length === 0 || loadingTontines" (click)="shareCode()">
+                          {{ 'MENU_SHARE_CODE_TONTINE' | translate }}
                     </ion-button>
                 </ion-col>
               </ion-row>
